--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -2,8 +2,8 @@
 
 <form action="/users/create-session" method="POST">
     
-    <input type="email" name="email " placeholder="Email" required autofocus>
-    <input type="password" name=" password" placeholder="Your password" required autofocus>
+    <input type="email" name="email" placeholder="Email" required autofocus>
+    <input type="password" name="password" placeholder="Your password" required autofocus>
     
-    <input type="submit" value="Sign-In"></button>
+    <input type="submit" value="Sign-In"></input>
 </form>
