--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,3 +2,5 @@
     <link rel="stylesheet" href="/css/profile.css">
     <h1>Codeial /Profile page</h1>
    
+    <p>Name : <%= user.name %></p>
+    <p>Email : <%= user.email %></p>
