--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -8,7 +8,7 @@
     
     <input type="password" name="password" placeholder="Password" required autofocus>
     <input type="password" name="confirm_password" placeholder="Confirm Password" required autofocus>
-    <input type="submit" value="Sign-up"></button>
+    <input type="submit" value="Sign-up"></input>
 </form>
 
 
