MVC STRUCTURE CREATED WITH SASS

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,30 @@
 <footer>
     Page footer
+    <div class="footer" >
+        <ul>
+            <% if (locals.user) {%>
+    
+                
+            <!-- <li><a href="/users/sign-out">Sign Out</a></li> -->
+            <% }else {%>
+             
+                <% }%>
+    
+        </ul>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </footer>
