--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,10 +1,54 @@
-body{
-    margin: 0;
-    color: orangered;
-    text-align: center;
-    /* background-color: aqua; */
-    background: #0F2027;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+h1 {
+  display: flex;
+  justify-content: center; }
 
-}
+.navbar {
+  margin: 0; }
+
+.i {
+  color: white; }
+
+.hero__container--right {
+  animation-name: floating;
+  animation-duration: 1.25s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out; }
+
+@keyframes floating {
+  0% {
+    transform: translate(0, 0px); }
+  50% {
+    transform: translate(0, 15px); }
+  100% {
+    transform: translate(0, 0px); } }
+
+.header {
+  background-color: #007cb9;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 0; }
+
+body {
+  margin: 0;
+  text-align: center;
+  color: #005792;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
+  body #layout-main {
+    height: 100 vh; }
+  body #footer {
+    position: absolute;
+    text-align: center;
+    margin-top: 10rem;
+    right: 47.5%; }
+  body #header {
+    background-color: #007cb9;
+    margin-left: 0%;
+    margin-right: 0%;
+    margin-top: 0; }
+  body ul {
+    padding: 0;
+    list-style: none; }
