--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,6 +1,6 @@
 
     <link rel="stylesheet" href="/css/profile.css">
-    <h1>Codeial /Profile page</h1>
+    <!-- <h1>Codeial /Profile page</h1> -->
    
     <p>Name : <%= user.name %></p>
     <p>Email : <%= user.email %></p>
