--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,9 +1,34 @@
-<h1>Sign in </h1>
+
+<link rel="stylesheet" href="/css/loginform.css">
+<p class="webname">
+    <i class="far fa-eye "></i>
+    Codeial</p>
+
+<div class="container">
+    <h1>Sign in </h1>
 
 <form action="/users/create-session" method="POST">
+
+   
+        <div class="form-control">
+            <input type="email" name="email" 
+            placeholder="Email" 
+            required autofocus>
+            
+        </div>
+        <div class="form-control">
+            <input type="password" name="password" 
+            placeholder="Your password"
+             required autofocus>
+             
+            
+        </div>
+        
+    <!-- <input type="email" name="email" placeholder="Email" required autofocus>
+    <input type="password" name="password" placeholder="Your password" required autofocus> -->
     
-    <input type="email" name="email" placeholder="Email" required autofocus>
-    <input type="password" name="password" placeholder="Your password" required autofocus>
-    
-    <input type="submit" value="Sign-In"></input>
+    <input class="btn" type="submit" value="Sign-In"></input>
 </form>
+
+</div>
+<script src="script.js"></script>
