--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -39,11 +39,13 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
   body #layout-main {
     height: 100 vh; }
-  body #footer {
+  body footer {
     position: absolute;
+    bottom: 0;
     text-align: center;
     margin-top: 10rem;
-    right: 47.5%; }
+    width: 100%;
+    height: 2.5rem; }
   body #header {
     background-color: #007cb9;
     margin-left: 0%;
