--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,7 +32,7 @@
   color: #f7f7f7;
   display: flex;
   justify-content: space-between;
-  padding: 0.5rem calc((100vw - 1200px) / 2);
+  padding-top: 5px;
   z-index: 10;
   position: relative;
   text-decoration: none;
@@ -141,7 +141,8 @@
     border: none;
     border-radius: 4px;
     color: #f7f7f7;
-    margin-top: 2rem;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
     cursor: pointer;
     position: relative;
     transition: all 0.3s;
