--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -54,7 +54,8 @@
   color: $light;
   display: flex;
   justify-content:space-between;
-  padding: 0.5rem calc((100vw - 1200px) / 2);
+  padding-top: 5px;
+  // padding: 0.5rem calc((100vw - 1200px) / 2);
   z-index: 10;
   position: relative;
   text-decoration: none;
