--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,3 +1,18 @@
+.postPage{
+    // color:#fbf2d5 ;
+    // margin-top: 50px;
+    display: flex;
+    flex-direction: row;
+}
 body{
-    color:#fbf2d5 ;
+    margin: 0;
+    text-align: center; 
+    color: #005792;
+
+    // display: flex;
+    // flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
 }
