--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -43,30 +43,19 @@ body{
     height: 100vh;
     overflow: hidden;
 
-
-
-
-
-
-
-    // text-align: center;
-    // background-color: #ff9a3c;
-    // background-color: aqua; 
-    // background: #0F2027;  
-    //  background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);
-    //  background: linear-gradient(to right, #2C5364, #203A43, #0F2027); 
-   
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     #layout-main{
         height: 100 vh;
     }
-    #footer{
+    footer{
         position: absolute;
+        bottom: 0;
         // display: flex;
         text-align: center;
         margin-top: 10rem;;
-      
-        right: 47.5%;
+        width: 100%;
+        height:2.5rem;
+        // right: 47.5%;
        
     }
     #header{
