--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -80,7 +80,8 @@
       border: none;
       border-radius: 4px;
       color: $light;
-      margin-top: 2rem;
+      margin-top: 0.5rem;
+      margin-bottom: 1rem;
       cursor: pointer;
       position: relative;
       transition: all 0.3s;
