--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -18,7 +18,10 @@
                     <!-- Codeial  -->
                    
 
-                    <h1><%=title %></h1>
+                    <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <%=title %></h1>
                     <div class="navbar_bars">
                         <!-- <h1><%=title %></h1> -->
                         <!-- <i class="fas fa-bars"></i> -->
