--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,38 +1,70 @@
-<!-- <link rel="stylesheet" href="/css/header.css"> -->
-<!-- <link rel="stylesheet" href="/css/styles.css"> -->
-    <!-- <h1><%=title %></h1> -->
-   <!-- <% if(!locals.user){%> -->
-        <!-- <form action="/users/sign-in" method="get">
-            <input type="submit" value="Sign In"></input>
-        </form>
-
-        <form action="/users/sign-up" method="get">
-            <input type="submit" value="Sign Up"></input>
-        </form>  -->
-
-    <!-- <%}%> -->
-
+<!-- 
+<link rel="stylesheet" href="/css/home.scss"> -->
+<link rel="stylesheet" href="/css/home.css">
      
 
-<div class="hero" >
+<!-- <div class="hero" >
 
     <div class="hero__container">
       <div class="hero__container--left">
         <h1>Social media website</h1>
         <h2>Created by Sankha</h2>
-        <p>Sign up now to join the list.</p>
-        <!-- <button class="hero__container--btn"><a href="#">Sign Up</a></button> -->
-        <!-- <p>Sign up now to join the list.</p> -->
+        <p>Sign up now to join the list.</p> -->
+       
 
         <% if (!locals.user) {%>
+          <div class="hero" >
+
+            <div class="hero__container">
+              <div class="hero__container--left">
+                <h1>Social media website</h1>
+                <h2>Created by Sankha</h2>
+                <p>Sign up now to join the list.</p>
           <button class="hero__container--btn"><a href="/users/sign-up">Sign Up</a></button>
           <button class="hero__container--btn"><a href="/users/sign-in">Sign In</a></button>
-       <% } else {%>
-        <button class="hero__container--btn"><a href="/users/sign-out">Sign Out</a></button>
-
-        <% }%>
-        <!-- <a href="/users/sign-up" class="navbar__menu--links" id="button">Sign Up</a> -->
+        </div>
+        <div class="hero__container--right">
+          <img
+            src="images/img-2.svg"
+            alt="alien"
+            class="hero__container--img"
+          />
+        </div>
       </div>
+       <% } else {%>
+        <!-- <button class="hero__container--btn"><a href="/users/sign-out">Sign Out</a></button> -->
+        <section id="feed-posts">
+          <br><br><br>
+          <h4>Posts</h4>
+          
+          <form action="/posts/create" id="new-post-form" method="POST">
+            <textarea name="content"  cols="30" rows="4" placeholder="type here.."></textarea>
+            <br>
+          <input type="submit" class="hero__container--btn" value="Post">
+          </form>
+          <div id="posts-list-container">
+            <ul>
+              <% for(post of posts){%>
+                <li>
+                  <p>
+                   -><%= post.content %><small>:<%= post.user.name %></small>
+                    <br>
+                    <!-- <br>
+                    <small><%= post.user.name %></small>
+                    <br> -->
+                    <br>
+                  </p>
+ 
+                </li>
+                <%} %>
+
+            </ul>
+          </div>
+          
+        </section>
+        <% }%>
+       
+      <!-- </div>
       <div class="hero__container--right">
         <img
           src="images/img-2.svg"
@@ -40,6 +72,6 @@
           class="hero__container--img"
         />
       </div>
-    </div>
+    </div> -->
 
    
