--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -28,7 +28,7 @@
                         <div class="navbar_menu">
                             <a href="/users/profile" class="navbar_menu--links">Profile</a>
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <a href="/users/posts" class="navbar_menu--links">Posts</a>
+                            <a href="/" class="navbar_menu--links">Home</a>
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <a href="/users/sign-out" class="navbar_menu--links">Sign-Out</a>
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
