--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -45,17 +45,19 @@
     }
 
     &--left h1 {
-      font-size: 4rem;
+      font-size: 4.2rem;
       color: $lime;
+      // color: #007cb9;
 
       @include mobile {
         font-size: 1.5rem;
       }
     }
 
-    &--left h2 {
+    &--left h3 {
       font-size: 4rem;
-      color: $dark;
+      // color: $dark;
+      color:#0092ca ;
 
       @include mobile {
         font-size: 2rem;
@@ -64,7 +66,8 @@
 
     &--left p {
       font-size: 2rem;
-      color: $dark;
+      // color: $dark;
+      color:#005792;
       margin-top: 1rem;
       font-weight: 700;
 
@@ -76,6 +79,7 @@
     &--btn {
       font-size: 1rem;
       background-color: $lime;
+      // background-color: ;
       padding: 14px 32px;
       border: none;
       border-radius: 4px;
