--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
             <div class="hero__container">
               <div class="hero__container--left">
                 <h1>Social media website</h1>
-                <h2>Created by Sankha</h2>
+                <h3>Created by Sankha</h3>
                 <p>Sign up now to join the list.</p>
           <button class="hero__container--btn"><a href="/users/sign-up">Sign Up</a></button>
           <button class="hero__container--btn"><a href="/users/sign-in">Sign In</a></button>
@@ -38,7 +38,7 @@
           <h4>Posts</h4>
           
           <form action="/posts/create" id="new-post-form" method="POST">
-            <textarea name="content"  cols="30" rows="4" placeholder="type here.."></textarea>
+            <textarea name="content"  cols="25" rows="4" placeholder="type here.." required></textarea>
             <br>
           <input type="submit" class="hero__container--btn" value="Post">
           </form>
@@ -46,17 +46,45 @@
             <ul>
               <% for(post of posts){%>
                 <li>
+                  <br>
                   <p>
-                   -><%= post.content %><small>:<%= post.user.name %></small>
+                   -><%= post.content %> :<small><%= post.user.name %></small>
                     <br>
                     <!-- <br>
                     <small><%= post.user.name %></small>
                     <br> -->
                     <br>
                   </p>
- 
+                  <div class="post-comments">
+                    <% if (locals.user){ %>
+                        <form action="/comments/create" method="POST">
+                            <input type="text" name="content" placeholder="Type Here to add comment..." required>
+                             <!-- we want to send the post id of comment 
+                        the id at which i want to add the comment to -->
+                            <input type="hidden" name="post" value="<%= post._id %>" >
+                            <input type="submit" value="Add Comment">
+                        </form>
+
+                    <% } %>
+
+                </div>
+                <div class="post-comments-list">
+                  <ul id="post-comments-<%= post._id %>">
+                    <% for (comment of post.comments){%>
+                      <p>
+                        <!-- <%= comment.content %> -->
+                        <%= comment.user.name %>:
+                        <small>
+                          <%= comment.content %>
+                          <!-- :<%= comment.user.name %> -->
+                        </small>
+                      </p>
+                      <%} %>                  
+                  </ul>
+                </div>
+                
                 </li>
-                <%} %>
+                <% } %>
 
             </ul>
           </div>
@@ -74,4 +102,43 @@
       </div>
     </div> -->
 
-   
+
+<!-- 
+    <section id="feed-posts">
+      <h4>Posts</h4>
+      <% if(locals.user){ %>
+      <form action="/posts/create" id="new-post-form" method="POST">
+          <textarea name="content" cols="30" rows="3" placeholder="Type Here..."></textarea>
+          <input type="submit" value="Post">
+      </form>
+      <% } %>
+  
+      <div id="posts-list-container">
+          <ul>
+              <% for(post of posts){ %>
+                  
+              <li>
+                  <p>
+                      <%= post.content %>
+                      <br>
+                      <small>
+                          <%= post.user.name %>
+                      </small>
+                  </p>
+                  <div class="post-comments">
+                      <% if (locals.user){ %>
+                          <form action="/comments/create" method="POST">
+                              <input type="text" name="content" placeholder="Type Here to add comment...">
+                              <input type="hidden" name="post" value="<%= post._id %>" >
+                              <input type="submit" value="Add Comment">
+                          </form>
+  
+                      <% } %>
+                  </div>
+                  
+              </li>
+                  
+              <%} %>
+          </ul>
+      </div>
+  </section> -->
