--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,10 +1,13 @@
 <link rel="stylesheet" href="/css/footer.css">
 
 <footer>
-    Page footer
+   
     <div class="footer" >
         <ul>
             <% if (locals.user) {%>
+                
+                    <p>Created by Sankha Patra © 2021</p>
+                
     
                 
             <!-- <li><a href="/users/sign-out">Sign Out</a></li> -->
