--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -11,7 +11,9 @@
     
                 <nav class="navbar">
                     <p class="webname">
-                        <i class="far fa-eye "></i>
+                        <!-- <img src="images/logo" alt=""> -->
+                        <img src="https://img.icons8.com/external-justicon-lineal-color-justicon/32/000000/external-chat-notifications-justicon-lineal-color-justicon.png"/>
+                        <!-- <i class="far fa-eye "></i> -->
                         Codeial</p>
                     <!-- <i class="far fa-eye fa-2x"></i>
                      <img class="navbar_bars" src="/images/slack.png" alt=""> -->
