--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,11 +1,11 @@
 footer {
-  background: #000428;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #004e92, #000428);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #004e92, #000428);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   bottom: 0;
   position: absolute;
   color: white;
-  padding-top: 5px; }
+  padding-top: 5px;
+  background: #8E2DE2;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #4A00E0, #8E2DE2);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #4A00E0, #8E2DE2);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
