--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -46,7 +46,10 @@
 
     &--left h1 {
       font-size: 4.2rem;
-      color: $lime;
+      color: #8E2DE2;  /* fallback for old browsers */
+      color: -webkit-linear-gradient(to right, #4A00E0, #8E2DE2);  /* Chrome 10-25, Safari 5.1-6 */
+      color: linear-gradient(to right, #4A00E0, #8E2DE2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+      // color: $lime;
       // color: #007cb9;
 
       @include mobile {
@@ -57,7 +60,9 @@
     &--left h3 {
       font-size: 4rem;
       // color: $dark;
-      color:#0092ca ;
+      // color:#0092ca ;
+      color: #4A00E0; 
+      
 
       @include mobile {
         font-size: 2rem;
@@ -66,8 +71,10 @@
 
     &--left p {
       font-size: 2rem;
+      color: #8E2DE2;
       // color: $dark;
-      color:#005792;
+      // color:#005792;
+   
       margin-top: 1rem;
       font-weight: 700;
 
@@ -79,7 +86,7 @@
     &--btn {
       font-size: 1rem;
       background-color: $lime;
-      // background-color: ;
+      background-color:#8E2DE2;
       padding: 14px 32px;
       border: none;
       border-radius: 4px;
@@ -107,6 +114,7 @@
       width: 0;
       height: 100%;
       background: $orangeRed;
+      // background: #4A00E0;;
       transition: all 0.3s;
       border-radius: 4px;
     }
