--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,7 +17,7 @@
     <%- style %>
 </head>
 <% if(locals.user){%>
-    <% %><body style="background-color: white;"></body>
+    <% %><body ></body>
         <%}%>
 <body>
 
