--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,6 +1,6 @@
 
     <link rel="stylesheet" href="/css/profile.css">
     <!-- <h1>Codeial /Profile page</h1> -->
-   
-    <p>Name : <%= user.name %></p>
-    <p>Email : <%= user.email %></p>
+   <br><br>
+    <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" >User : <%= user.name %></p>
+    <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Email : <%= user.email %></p>
