--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,7 +1,8 @@
 
 <link rel="stylesheet" href="/css/loginform.css">
 <p class="webname">
-    <i class="far fa-eye "></i>
+    <!-- <i class="far fa-eye "></i> -->
+    <img src="https://img.icons8.com/external-justicon-lineal-color-justicon/64/000000/external-chat-notifications-justicon-lineal-color-justicon.png"/>
     Codeial</p>
 
 <div class="container">
