added separate section to show friends

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -23,14 +23,19 @@
                     <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        
                         <%=title %></h1>
                     <div class="navbar_bars">
                         <!-- <h1><%=title %></h1> -->
                         <!-- <i class="fas fa-bars"></i> -->
                         <div class="navbar_menu">
-                            <a href="/users/profile" class="navbar_menu--links">Profile</a>
+                           
+                            <!-- <i class="fas fa-user" style="color:#00bbf0 ;"></i>
+                            <a href="/users/profile/:profile_user.id" class="navbar_menu--links">Profile</a> -->
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <a href="/" class="navbar_menu--links">Home</a>
+                            <a href="/" class="navbar_menu--links">
+                                <i class="fas fa-home"></i>
+                                Home</a>
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <a href="/users/sign-out" class="navbar_menu--links">Sign-Out</a>
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
