--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -8,10 +8,7 @@ body {
   color: #4A00E0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: #c7eeff;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  overflow: hidden; }
+  height: 100vh; }
 
 .button {
   cursor: pointer;
@@ -93,3 +90,20 @@ body {
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
   animation-delay: 0s; }
+
+#home-container {
+  display: flex; }
+  #home-container #feed-posts {
+    width: 85%;
+    height: 100vh;
+    padding: 10px; }
+  #home-container #user-friends {
+    width: 15%;
+    border-left: 2px solid  #4A00E0;
+    border-bottom: 2px solid  #4A00E0;
+    height: 100vh;
+    padding-bottom: 10px;
+    margin-bottom: 0;
+    background-color: #d59bf6;
+    bottom: 0;
+    text-decoration: none; }
