--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -85,9 +85,10 @@
         transition: all 0.3s ease; }
 
 * {
-  margin: 0;
+  margin-top: 0%;
+  margin-bottom: 0%;
   padding: 0;
-  font-family: 'Kumbh Sans', sans-serif; }
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
 
 .hero__container {
   display: grid;
