--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -10,22 +10,16 @@ body{
     // color: #005792;
     color: #4A00E0;;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    // font-style: app;
-    // background-color: #bae8e8;
-    // background-color: #8ed2c9;
-    // background-color: #a2a8d3;
-    // background-color: #e7eaf6;
-    // background-color: #ffcece;
-    // background-color: #f6e4c4;
+   
     background-color: #c7eeff;
     // background-color:#fbf2d5 ;
 
     // display: flex;
     // flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    // align-items: center;
+    // justify-content: center;
     height: 100vh;
-    overflow: hidden;
+    // overflow: hidden;
 }
 .button {
     cursor: pointer;
@@ -127,5 +121,27 @@ body{
    
 
 }
+#home-container{
+  display: flex;
+  #feed-posts{
+    width: 85%;
+    height: 100vh;
+    padding: 10px;
+   
+  }
+  #user-friends{
+    width: 15%;
+    border-left: 2px solid  #4A00E0;
+    border-bottom: 2px solid  #4A00E0;
+    height: 100vh;
+    padding-bottom: 10px;
+    margin-bottom: 0;
+    // background-color: #a393eb;
+    background-color: #d59bf6;
+    bottom: 0;
+    text-decoration: none;
+  }
+}
+
   
  
