--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -4,9 +4,12 @@
 
 * {
   // box-sizing: border-box;
-  margin: 0;
+  // margin: 0;
+  margin-top: 0%;
+  margin-bottom: 0%;
+ 
   padding: 0;
-  font-family: 'Kumbh Sans', sans-serif;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 // Hero Section CSS
