--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,6 +1,33 @@
 
     <link rel="stylesheet" href="/css/profile.css">
+    <link rel="stylesheet" href="/css/home.css">
     <!-- <h1>Codeial /Profile page</h1> -->
-   <br><br>
-    <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" >User : <%= user.name %></p>
-    <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Email : <%= user.email %></p>
+   
+
+        <% if(user.id == profile_user.id) {%>
+           
+            <!-- if user matches show the form -->
+            <!-- to update user name or email -->
+            <br><br>
+            <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+                Update username or password
+            </p>
+            <br>
+            
+            <div class="form_control" style="display:inline-block;">
+            <form class="form_control" action="/users/update/<%= profile_user.id %>" method="POST">
+                <input type="text" name="name" placeholder="User" value="<%= profile_user.name %>" required>
+                <input type="email" name="name" placeholder="Email" value="<%= profile_user.email %>" required>
+            </div>
+                <input class="button" type="submit" value="Update">
+            </form>
+        
+            <%}else{%>
+                <!-- show only profile info -->
+                <br><br>
+                <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" >
+                 User : <%= profile_user.name %></p>
+                <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+                Email : <%= profile_user.email %></p>
+
+                <%} %>
