--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -4,7 +4,6 @@
 
 body {
   margin: 0;
-  text-align: center;
   color: #4A00E0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: #c7eeff;
@@ -51,14 +50,13 @@ body {
   cursor: pointer;
   margin-top: 5px;
   display: inline-block;
-  width: 5%;
+  width: 6%;
   background: #fecd51;
   padding: 5px;
   font-family: inherit;
   font-size: 15px;
   border: 0;
-  border-radius: 5px;
-  display: inline; }
+  border-radius: 5px; }
 
 .bttn:focus {
   outline: 0; }
