--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -6,7 +6,7 @@
 }
 body{
     margin: 0;
-    text-align: center; 
+    // text-align: center; 
     // color: #005792;
     color: #4A00E0;;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -70,7 +70,7 @@ body{
     cursor: pointer;
     margin-top: 5px;
     display: inline-block;
-    width: 5%;
+    width: 6%;
     background: #fecd51;
     
     padding: 5px;
@@ -78,7 +78,7 @@ body{
     font-size: 15px;
     border: 0;
     border-radius: 5px;
-    display: inline;
+   
   }
   
   .bttn:focus {
@@ -122,12 +122,15 @@ body{
 
 }
 #home-container{
+  // align-content: flex-start;
   display: flex;
   #feed-posts{
     width: 85%;
     height: 100vh;
     padding: 10px;
     margin-left: 16%;
+   
+    // align-content:space-around;
    
   }
   #user-friends{
