--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,8 @@
 
     </title>
     <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
     <!-- <link rel="stylesheet" href="/css/header.css"> -->
     <link rel="stylesheet" href="/css/footer.css">
     <!-- <link rel="stylesheet" href="/css/styles.css"> -->
@@ -25,10 +27,18 @@
     <% if(locals.user){%>
     <%- include("_header"); %>
         <%}%>
+
+
+    <!-- <% if(flash.success && flash.success.length > 0) { %>
+        <h5 style="background-color:#1ee494 ;">
+            <%= flash.success %>
+        </h5>
+        <% } %> -->
     
 
-    
+   
     <%- body %>
+    
 
 
     <% if(locals.user){%>
@@ -38,7 +48,46 @@
     
 
     <%- script %>
+    <script>
+        <% if (flash.success && flash.success.length > 0){ %>
+            new Noty({
+                theme:"sunset",
+                text: "<%= flash.success %>",
+                type:"success",
+                layout:"topRight",
+                timeout:2000
+                 
+            }).show();
+        <%} %>
+
+        <% if( flash.error && flash.error.length > 0){ %>
+                new Noty({
+                    theme:"sunset",
+                    text: "<%= flash.error %>",
+                    type:"error",
+                    layout:"topRight",
+                    timeout:1500
+                 
+                 }).show();
+
+        <%} %>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </script>
     
 </body>
+
 </html>
+
 <!-- // the script and style tag puts diff styles and scripts for coreesponding pages -->
