added image uploading feature

--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -1,17 +1,26 @@
 footer{
-    // background: #000428;  /* fallback for old browsers */
-    // background: -webkit-linear-gradient(to right, #004e92, #000428);  /* Chrome 10-25, Safari 5.1-6 */
-    // background: linear-gradient(to right, #004e92, #000428); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    bottom:0;
-    // margin: 0;
-    position: absolute;
+
+
+  margin-top: 20px;
+ 
     color: white;
     padding-top: 5px;
 
     background: #8E2DE2;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #4A00E0, #8E2DE2);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #4A00E0, #8E2DE2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
+  top: auto;
+        position: relative;
+      
+     
+        // display: flex;
+        text-align: center;
+        // margin-top: 10rem;;
+        width: 100%;
+        height:1.5rem;
+        // right: 47.5%;
+       
+   
   
 
 
