--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,6 +1,5 @@
 footer {
-  bottom: 0;
-  position: absolute;
+  margin-top: 20px;
   color: white;
   padding-top: 5px;
   background: #8E2DE2;
@@ -8,4 +7,9 @@ footer {
   background: -webkit-linear-gradient(to right, #4A00E0, #8E2DE2);
   /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #4A00E0, #8E2DE2);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  top: auto;
+  position: relative;
+  text-align: center;
+  width: 100%;
+  height: 1.5rem; }
