--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -4,10 +4,12 @@
 
 body {
   margin: 0;
+  font-weight: bolder;
+  height: 100vh;
+  position: relative;
   color: #4A00E0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #c7eeff;
-  height: 100vh; }
+  background-color: #fecd51; }
 
 .button {
   cursor: pointer;
@@ -90,19 +92,19 @@ body {
   animation-delay: 0s; }
 
 #home-container {
-  display: flex; }
+  display: flex;
+  min-height: 100vh; }
   #home-container #feed-posts {
-    width: 85%;
-    height: 100vh;
-    padding: 10px;
-    margin-left: 16%; }
+    width: 80%;
+    margin-left: 45%; }
   #home-container #user-friends {
     width: 15%;
     border-left: 2px solid  #4A00E0;
     border-bottom: 2px solid  #4A00E0;
-    height: 100vh;
-    padding-bottom: 10px;
+    min-height: 100vh;
+    position: relative;
     margin-bottom: 0;
     background-color: #d59bf6;
-    bottom: 0;
+    padding-left: 5%;
+    padding-right: 2.5%;
     text-decoration: none; }
