--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -29,23 +29,9 @@ h1 {
   margin-top: 0; }
 
 body {
-  margin: 0;
-  text-align: center;
-  color: #005792;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  overflow: hidden;
+  color: #4A00E0;
+  position: relative;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
-  body #layout-main {
-    height: 100 vh; }
-  body footer {
-    position: absolute;
-    bottom: 0;
-    text-align: center;
-    margin-top: 10rem;
-    width: 100%;
-    height: 1.5rem; }
   body #header {
     background-color: #007cb9;
     margin-left: 0%;
