--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -1,9 +1,15 @@
 body {
   align-items: center;
   margin: 0;
-  margin: 0;
-  color: ghostwhite;
-  background-color: #141010; }
+  color: #505050;
+  background-color: #141010;
+  height: 100vh;
+  position: relative;
+  bottom: 0; }
+
+.profile {
+  min-height: 100vh;
+  align-items: center; }
 
 ul {
   list-style-type: none; }
