--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -4,21 +4,58 @@
     display: flex;
     flex-direction: row;
 }
+// footer{
+ 
+//     background: #8E2DE2;
+//     background: -webkit-linear-gradient(to right, #4A00E0, #8E2DE2);
+//     background: linear-gradient(to right, #4A00E0, #8E2DE2);
+    
+//     position: relative;
+   
+   
+//     text-align: center;
+//     width: 100%;
+//     height: 1.5rem;
+//     color: white;
+//     padding-top: 5px;
+//     bottom: 0;
+
+//     top: 100%;
+       
+      
+     
+//         // display: flex;
+//         text-align: center;
+//         // margin-top: 10rem;;
+      
+//         // right: 47.5%;
+       
+    
+// }
 body{
-    margin: 0;
+  margin: 0;
+ font-weight: bolder;
+ 
+ height: 100vh;
+ position: relative;
+
+
+   
     // text-align: center; 
     // color: #005792;
-    color: #4A00E0;;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #4A00E0;
    
-    background-color: #c7eeff;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
+    // background-color: #c7eeff;
+    background-color: #fecd51;
     // background-color:#fbf2d5 ;
 
     // display: flex;
     // flex-direction: column;
     // align-items: center;
     // justify-content: center;
-    height: 100vh;
+    // height: auto;
     // overflow: hidden;
 }
 .button {
@@ -124,11 +161,12 @@ body{
 #home-container{
   // align-content: flex-start;
   display: flex;
+  min-height: 100vh;
   #feed-posts{
-    width: 85%;
-    height: 100vh;
-    padding: 10px;
-    margin-left: 16%;
+    width: 80%;
+    // height: 100vh;
+    // padding: 10px;
+    margin-left: 45%;
    
     // align-content:space-around;
    
@@ -137,14 +175,18 @@ body{
     width: 15%;
     border-left: 2px solid  #4A00E0;
     border-bottom: 2px solid  #4A00E0;
-    height: 100vh;
-    padding-bottom: 10px;
+    min-height: 100vh;
+    position: relative;
+    // padding-bottom: 10px;
     margin-bottom: 0;
     // background-color: #a393eb;
     background-color: #d59bf6;
-    bottom: 0;
+    // bottom: 0;
+    padding-left:5%;
+    padding-right: 2.5%;
     text-decoration: none;
   }
+ 
 }
 
   
