--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -32,32 +32,18 @@ h1{
 }
 
 body{
-    margin: 0;
-    text-align: center; 
-    color: #005792;
-
-    // display: flex;
-    // flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: hidden;
-
+   
+    // text-align: center; 
+    // color: #005792;
+    color: #4A00E0;
+    position: relative;
+    // height: 100vh;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    #layout-main{
-        height: 100 vh;
-    }
-    footer{
-        position: absolute;
-        bottom: 0;
-        // display: flex;
-        text-align: center;
-        margin-top: 10rem;;
-        width: 100%;
-        height:1.5rem;
-        // right: 47.5%;
-       
-    }
+   
+    // background-color: #c7eeff;
+    // background-color: #fdffcd;
+
+    
     #header{
       background-color: #007cb9;
       margin-left: 0%;
