--- a/assets/scss/profile.scss
+++ b/assets/scss/profile.scss
@@ -1,14 +1,23 @@
 body{
     align-items: center;
     margin: 0;
-    margin: 0;
-    color: ghostwhite;
+   
+    color: rgb(80, 80, 80);
    background-color:#141010 ;
+   height: 100vh;
+   position: relative;
+   bottom: 0;
     // background: #02AAB0;  /* fallback for old browsers */
     // background: -webkit-linear-gradient(to right, #00CDAC, #02AAB0); 
     // background: linear-gradient(to right, #00CDAC, #02AAB0);
     
     }
+    .profile{
+        min-height: 100vh; 
+        align-items: center;
+
+    }
+
     
    
 
