--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,10 +1,20 @@
 
     <link rel="stylesheet" href="/css/profile.css">
-    <link rel="stylesheet" href="/css/home.css">
+    <!-- <link rel="stylesheet" href="/css/home.css"> -->
     <!-- <h1>Codeial /Profile page</h1> -->
-   
+    <div class="profile">
+    <!-- <img src="<%=user.avatar%>" alt="<%= user.name %>" width="100">
+   <p>
+    <%= user.name %>
+   </p> -->
+   <img src="<%=profile_user.avatar%>" alt="<%= profile_user.name %>" width="100">
+   <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+    Name:<%= profile_user.name %>
+   </p>
+
 
         <% if(user.id == profile_user.id) {%>
+           
            
             <!-- if user matches show the form -->
             <!-- to update user name or email -->
@@ -15,9 +25,11 @@
             <br>
             
             <div class="form_control" style="display:inline-block;">
-            <form class="form_control" action="/users/update/<%= profile_user.id %>" method="POST">
-                <input type="text" name="name" placeholder="User" value="<%= profile_user.name %>" required>
-                <input type="email" name="name" placeholder="Email" value="<%= profile_user.email %>" required>
+            <form class="form_control" action="/users/update/<%= profile_user.id %>" enctype="multipart/form-data" method="POST">
+                <input type="text" name="name" placeholder="User" value="<%=profile_user.name%>" required>
+                
+                <input type="email" name="email" placeholder="Email" value="<%=profile_user.email%>" required>
+                <input type="file" name="avatar" placeholder="Profile Picture">
             </div>
                 <input class="button" type="submit" value="Update">
             </form>
@@ -31,3 +43,4 @@
                 Email : <%= profile_user.email %></p>
 
                 <%} %>
+            </div>
