--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -3,19 +3,25 @@
   flex-direction: row; }
 
 body {
+  background: #9796f0;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #fbc7d4, #9796f0);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #fbc7d4, #9796f0);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   margin: 0;
   font-weight: bolder;
   height: 100vh;
   position: relative;
   color: #4A00E0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #fecd51; }
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
 
 .button {
   cursor: pointer;
   margin-top: 5px;
   display: inline-block;
-  background: #00bbf0;
+  background: #005792;
+  color: white;
   padding: 5px;
   font-family: inherit;
   font-size: 15px;
@@ -27,7 +33,7 @@ body {
   outline: 0; }
 
 .button:hover {
-  background: #005792;
+  background: #00bbf0;
   color: white;
   transition: 1ms;
   transition: ease-in; }
@@ -35,7 +41,7 @@ body {
 .form_control input {
   background-color: transparent;
   border: 0;
-  border-bottom: 3px #00bbf0 solid;
+  border-bottom: 3px #005792 solid;
   display: inline;
   padding: 10px 0;
   font-size: 12px;
@@ -101,10 +107,16 @@ body {
     width: 15%;
     border-left: 2px solid  #4A00E0;
     border-bottom: 2px solid  #4A00E0;
-    min-height: 100vh;
+    min-height: 50vh;
     position: relative;
     margin-bottom: 0;
-    background-color: #d59bf6;
+    color: blanchedalmond;
     padding-left: 5%;
     padding-right: 2.5%;
-    text-decoration: none; }
+    text-decoration: none;
+    background: #4568DC;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #B06AB3, #4568DC);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #B06AB3, #4568DC);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
