--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,11 @@
 .navbar_menu--links {
   text-decoration: none;
   list-style: none;
-  color: white; }
+  color: white;
+  padding-bottom: 2px; }
+
+.header-img {
+  border-radius: 100%; }
 
 .navbar_menu--links:hover {
   color: orangered;
