--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -27,6 +27,11 @@
   text-decoration: none;
   list-style: none;
   color: white;
+  padding-bottom:2px;
+  
+}
+.header-img{
+  border-radius: 100%;
 }
 .navbar_menu--links:hover{
   color:orangered ;
